feat:added the vote endpoint for upvotes and downvotes
